--- a/source/DotNetBay.WebApp/Web.config
+++ b/source/DotNetBay.WebApp/Web.config
@@ -69,8 +69,13 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DatabaseConnection"
-    connectionString="Data Source=. \SQLEXPRESS;Initial Catalog=DneadAuctionDb-Local;Integrated Security=True"
-    providerName="System.Data.SqlClient" />
+    <add name="DatabaseConnection" connectionString="Data Source=. \SQLEXPRESS;Initial Catalog=DneadAuctionDb-Local;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
