--- a/source/DotNetBay.WebApp/DotNetBay.WebApp.csproj
+++ b/source/DotNetBay.WebApp/DotNetBay.WebApp.csproj
@@ -111,6 +111,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\auctions.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
@@ -146,7 +147,6 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Views\Auctions\Create.cshtml" />
     <Content Include="Views\Auctions\Index.cshtml" />
-    <Content Include="Views\Auctions\Details.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
