--- a/source/DotNetBay.SelfHost/DotNetBay.SelfHost.csproj
+++ b/source/DotNetBay.SelfHost/DotNetBay.SelfHost.csproj
@@ -74,10 +74,17 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotNetBay.WebApi\DotNetBay.WebApi.csproj">
+      <Project>{2eb0a13a-a27a-4693-afba-be3fc4d14646}</Project>
+      <Name>DotNetBay.WebApi</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
