--- a/source/DotNetBay.WebApi/DotNetBay.WebApi.csproj
+++ b/source/DotNetBay.WebApi/DotNetBay.WebApi.csproj
@@ -61,10 +61,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuctionController.cs" />
-    <Compile Include="CreateAuctionDto.cs" />
+    <Compile Include="Controller\AuctionController.cs" />
+    <Compile Include="Controller\BidController.cs" />
+    <Compile Include="Dto\CreateAuctionDto.cs" />
+    <Compile Include="Dto\CreateBidDto.cs" />
+    <Compile Include="Dto\GetAuctionDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StatusController.cs" />
+    <Compile Include="Controller\StatusController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -92,6 +95,7 @@
       <Name>DotNetBay.Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
