--- a/source/DotNetBay.WPF/packages.config
+++ b/source/DotNetBay.WPF/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
 </packages>
