--- a/source/DotNetBay.WebApi/DotNetBay.WebApi.csproj
+++ b/source/DotNetBay.WebApi/DotNetBay.WebApi.csproj
@@ -63,9 +63,8 @@
   <ItemGroup>
     <Compile Include="Controller\AuctionController.cs" />
     <Compile Include="Controller\BidController.cs" />
-    <Compile Include="Dto\CreateAuctionDto.cs" />
+    <Compile Include="Dto\AuctionDto.cs" />
     <Compile Include="Dto\CreateBidDto.cs" />
-    <Compile Include="Dto\GetAuctionDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controller\StatusController.cs" />
   </ItemGroup>
